Add PayPal payment integration for membership registration and upgrade